# SQLiteFrame

./: .gitignore  LICENSE  README.md  backup.py  main.py  pyproject.toml  schema.py  setup.cfg  suggested.py
.github/workflows/: pypi-publish  python-publish.yml
docs/: package.json  pnpm-lock.yaml
docs/src/: app.html
docs/src/lib/components/blocks/: ChildBlock.svelte  DeprecationBlock.svelte  DescriptionBlock.svelte  ExamplesBlock.svelte  LinksBlock.svelte  NotesBlock.svelte  ParametersBlock.svelte  RaisesBlock.svelte  ReturnsBlock.svelte  SourceBlock.svelte  VariablesBlock.svelte
docs/src/lib/components/extra/: Badge.svelte
docs/src/lib/components/navigation/: ProjectTree.svelte  Search.svelte  SearchResult.svelte  Sidebar.svelte  (+1 more)
docs/src/lib/content/: configuration.ts  project.ts
docs/src/lib/stores/: node.ts  searching.ts
docs/src/lib/types/: json_types.ts  types.ts
docs/src/lib/utils/: interactivity.ts  parsing.ts
docs/src/routes/: +layout.svelte  +page.svelte
sqliteframe/: __init__.py  database.py
sqliteframe/entity/: __init__.py  column.py  entity.py
sqliteframe/foreign_key/: __init__.py  foreign_key.py  restraints.py
sqliteframe/join/: __init__.py  join.py  join_types.py
sqliteframe/order_by/: __init__.py  order_by.py  order_types.py
sqliteframe/parameterized/: __init__.py  parameterized.py
sqliteframe/pragma/: __init__.py  statements.py  states.py  types.py
sqliteframe/result/: __init__.py  result.py
sqliteframe/statements/: __init__.py  create_table.py  delete_from.py  drop_table.py  insert_into.py  pragma.py  result.py  select.py  set.py  statement.py  wildcards.py
sqliteframe/suggested_schema/: __init__.py  column.py  fk_column.py  schema.py  table.py  unknown_type.py
sqliteframe/table/: __init__.py  column.py  table.py
sqliteframe/types/: __init__.py  blob.py  boolean.py  date.py  float.py  integer.py  null.py  string.py  time.py  type.py  types.py
sqliteframe/where/: __init__.py  comparisons.py  condition.py  conjunctions.py  join.py  where.py
sqliteframe/wildcards/: __init__.py  wildcards.py
src/sqliteframe/: __init__.py  database.py
src/sqliteframe/entity/: preserve_order.py
src/sqliteframe/foreign_key/: __init__.py  restraints.py
src/sqliteframe/join/: __init__.py
src/sqliteframe/parameterized/: parameterized.py
src/sqliteframe/pragma/: __init__.py  statements.py
src/sqliteframe/result/: result.py
src/sqliteframe/statements/: create_table.py  select.py
src/sqliteframe/suggested_schema/: __init__.py  column.py  schema.py  table.py  unknown_type.py
src/sqliteframe/types/: boolean.py  null.py  type.py
src/sqliteframe/where/: __init__.py  comparisons.py  conjunctions.py  where.py
(+10 files in other folders)
