[project]
name = "SQLiteFrame"
description = "A lightweight, zero-dependency ORM for SQLite in Python"
readme = "README.md"
version = "0.2.1"
authors = [
    { name = "Kieran Lock", email = "kieran.lock@outlook.com" }
]
keywords = ["orm", "sqlite3", "schematics"]
classifiers = [
    "License :: OSI Approved :: MIT License", 
    "Programming Language :: Python :: 3.11", 
    "Intended Audience :: Developers"
]
requires-python = ">=3.11"
license = {file = "LICENSE"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
GitHub = "https://github.com/Kieran-Lock/SQLiteFrame"
Documentation = "https://github.com/Kieran-Lock/SQLiteFrame/blob/master/DOCUMENTATION.md"
