[metadata]
name = SQLiteFrame
version = 0.0.1
author = LMNtal
author_email = kieran.lock@outlook.com
description = A lightweight, zero-dependency ORM for SQLite in Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = orm, sqlite3, schematics
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
