[metadata]
name = SQLiteFrame
version = 0.1.2
author = LMNtal
author_email = kieran.lock@outlook.com
description = A lightweight, zero-dependency ORM for SQLite in Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = orm, sqlite3, schematics
license = MIT
project_urls =
    GitHub = https://github.com/Kieran-Lock/SQLiteFrame
    Documentation = https://github.com/Kieran-Lock/SQLiteFrame/blob/master/DOCUMENTATION.md
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Intended Audience :: Developers

[options]
packages = find:
